--- a/friends/index.html
+++ b/friends/index.html
@@ -323,7 +323,7 @@
             
               
 <div class='new-meta-item author'>
-  <a href="https://canyie.github.io/" rel="nofollow">
+  <a href="https://blog.canyie.top/" rel="nofollow">
     <img src="/data/image/avatar.jpg">
     <p>残页</p>
   </a>
@@ -499,7 +499,7 @@
 
 <p>各位大佬想交换友链的话可以在 <a href="https://github.com/canyie/canyie.github.io/issues" target="_blank" rel="noopener">issue区</a> 留言，必须要有名称、头像链接、和至少一个标签哦～</p>
 <blockquote>
-<p>名称： 残页的小博客<br>头像： <a href="https://canyie.github.io/data/image/avatar.jpg">https://canyie.github.io/data/image/avatar.jpg</a><br>网址： <a href="https://canyie.github.io/">https://canyie.github.io/</a><br>标签： Android</p>
+<p>名称： 残页的小博客<br>头像： <a href="https://canyie.github.io/data/image/avatar.jpg" target="_blank" rel="noopener">https://canyie.github.io/data/image/avatar.jpg</a><br>网址： <a href="https://canyie.github.io/" target="_blank" rel="noopener">https://canyie.github.io/</a><br>标签： Android</p>
 </blockquote>
 
       </section>
