Fix friends card background color error

--- a/friends/index.html
+++ b/friends/index.html
@@ -489,7 +489,7 @@
                       </div>
                     </a>
                   
-                    <a class='friend-card' style='background:#ffeb3b; color:#FFFD'
+                    <a class='friend-card' style='background:#009688; color:#FFFD'
                       target="_blank" rel="external nofollow noopener noreferrer" href='http://blog.fasv.top/'>
                       <div class='friend-left'>
                         
